# projectx

./: Cargo.toml  README.md  config.sample.toml
migrations/: 0001_users.sql
src/: lib.rs  main.rs
src/common/: error.rs  validation.rs
src/config/: database.rs  logger.rs  mod.rs  redis.rs
src/handler/: demo.rs
src/middleware/: mod.rs
src/route/: api.rs
