[package]
name = "projectx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = "0.4"
config = "0.14"
http-body-util = "0.1"
redis = { version = "0.27", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }
